--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 
 .star {
   position: absolute;
-  background: #39ff14; 
+  background: #c9ffd5; 
   clip-path: polygon(
     50% 0%, 
     61% 35%, 
@@ -33,7 +33,7 @@ body {
   );
   opacity: 0;
   animation: fadeSequence 16s linear infinite;
-  box-shadow: 0 0 15px #39ff14; /* neon glow */
+  box-shadow: 0 0 15px #39ff14;
 }
 
 .star.small { width: 15px; height: 15px; }
